2008-03-04  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWPageDefElement.m
        GSWeb.framework/GSWTemplateParserXML.h
        GSWeb.framework/GSWTemplateParserXML.m
        GSWeb.framework/GSWPageDefParserExt.h
        GSWeb.framework/GSWPageDefParserExt.m
        GSWeb.framework/NSObject+IVarAccess+PerformSel.h
        GSWeb.framework/NSObject+IVarAccess+PerformSel.m
        GSWeb.framework/GSWHTMLAttrParserExt.h
        GSWeb.framework/GSWHTMLAttrParserExt.m
        GSWeb.framework/GSWHTMLParserExt.h
        GSWeb.framework/GSWHTMLParserExt.m
        GSWeb.framework/GSWPageDefParserTokenTypes.txt
        GSWeb.framework/GSWPageDefElement.h
        * deleted unused code
        GSWeb.framework/GSWWOCompatibility.h
        * removed define

2008-03-02  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWHTTPIO.m
        * optimized readDataLine
        * deleted all references to ANTLR

2008-03-01  David Wetzel <dave@turbocat.de>
        * GSWAdaptors/Apache2/mod_gsw.c
        read POST data before contacting the app

2008-02-18  David Wetzel <dave@turbocat.de>
        * GSWAdaptors/Apache2/mod_gsw.c
        pass more to the application

2008-02-13  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWUtils.m (boolValueFor,boolValueWithDefaultFor): Rely
	on [NSString-boolValue] as it handle NO and digits more correctly.
	
2007-11-30  David Wetzel <dave@turbocat.de>
	
        GSWeb.framework:
        * GSWBindingNameAssociation.m
        * GSWAssociation.m
        add _setValueNoValidation:inComponent:
        * GSWKeyValueAssociation
        added _isValueSettable
        added _setValueNoValidation: inComponent:
        * GSWRepetition.m
        use private _setValueNoValidation: inComponent: to speed things up

2007-11-25  David Wetzel <dave@turbocat.de>
	
	* GSWAdaptors/Apache2/mod_gsw.c
	Works also if a header or empty line at the end of the headers has a \r\n ending.
	GSWeb.framework:
	* rewrote large parts of GSWDefaultAdaptor 